--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
   }
 }
