--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webpack": "webpack",
     "start": "webpack serve  --env port=3000 mode=development",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "build:dev": "webpack --env mode=development",
+    "lint": "eslint --fix --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": "",
@@ -23,12 +24,25 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.2",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "css-loader": "^6.8.1",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "^3.0.3",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
@@ -49,5 +63,9 @@
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
+  },
+   "prettier": {
+    "singleQuote": true,
+    "printWidth": 120
   }
 }
