--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "webpack serve  --env port=3000 mode=development",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "lint": "eslint --fix --ext .ts,.tsx ."
+    "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix",
+    "lint:ts": "eslint \"**/*.{ts, tsx}\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\""
   },
   "keywords": [],
   "author": "",
@@ -46,6 +49,8 @@
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
@@ -64,7 +69,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
   },
-   "prettier": {
+  "prettier": {
     "singleQuote": true,
     "printWidth": 120
   }
