--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
     "start": "webpack serve  --env port=3000 mode=development",
     "build:prod": "webpack --env mode=production",
@@ -12,7 +11,8 @@
     "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix",
     "lint:ts": "eslint \"**/*.{ts, tsx}\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "lint:scss": "npx stylelint \"**/*.scss\""
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "unit": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
@@ -45,6 +47,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
