--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "src",
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "paths": {
       "app/*": ["app/*"],
       "pages/*": ["pages/*"],
