[FEAT] Add loki

--- a/package.json
+++ b/package.json
@@ -97,5 +97,20 @@
   "prettier": {
     "singleQuote": true,
     "printWidth": 120
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
