--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install modules
         run: npm install
+      - name: Build production project
+        run: npm run build:prod
       - name: Linting typescript
         run: npm run lint:ts
       - name: Linting css
         run: npm run lint:scss
       - name: Unit testing
         run: npm run test:unit
-      - name: build production project
-        run: npm run build:prod
