--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,7 @@ jobs:
         run: npm run lint:scss
       - name: Unit testing
         run: npm run test:unit
+      - name: Build Storybook
+        run: npm run storybook:build
+      - name: Screenshot testing
+        run: npm run test:ui:ci
