--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
-    "test:screen": "npx loki test",
-    "test:screen:ok": "npx loki test approve"
+    "test:ui": "npx loki test",
+    "test:ui:ok": "npx loki test approve",
+    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
   "author": "",
