--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -99,6 +100,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0"
   },
   "prettier": {
