[FEAT] Add json-server

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "test:ui:json": "node scripts/generate-visual-json-report.js"
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "start:dev:server": "node ./json-server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -72,6 +73,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "json-server": "^0.17.4",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
     "reg-cli": "^0.17.7",
