[FEAT] Add pre commit

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
-    "start:dev:server": "node ./json-server/index.js"
+    "start:dev:server": "node ./json-server/index.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -90,7 +91,8 @@
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
