--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    // "strict": true,
+    "strict": true,
     "baseUrl": "src",
     "types": ["node", "jest"],
     "paths": {
