--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "selector-class-pattern": null,
     "block-no-empty": null ,
-    "scss/double-slash-comment-empty-line-before": null 
+    "scss/double-slash-comment-empty-line-before": null,
+    "no-descending-specificity": null
   }
 }
