--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "concurrently": "^8.2.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
