--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-window": "^1.8.6",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/webpack": "^5.28.2",
     "@types/webpack-bundle-analyzer": "^4.6.1",
@@ -101,6 +102,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
@@ -111,7 +113,9 @@
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9"
   },
   "prettier": {
     "singleQuote": true,
