--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@storybook/react-webpack5": "^7.4.5",
     "@storybook/testing-library": "^0.2.1",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
