--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
@@ -61,6 +62,7 @@
     "@typescript-eslint/parser": "^6.7.2",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "circular-dependency-plugin": "^5.2.2",
     "concurrently": "^8.2.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
