--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-runtime": "^7.23.3",
+    "@babel/plugin-transform-typescript": "^7.23.3",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.0",
@@ -80,6 +82,7 @@
     "eslint-plugin-storybook": "^0.6.14",
     "eslint-plugin-wheatley-code": "^0.0.2",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
