--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
+    "start:vite": "vite",
     "start": "webpack serve  --env port=3000 mode=development",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts:fix": "eslint \"**/*.{ts, tsx}\" --fix",
@@ -62,6 +64,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
+    "@vitejs/plugin-react": "^4.1.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "circular-dependency-plugin": "^5.2.2",
@@ -105,6 +108,8 @@
     "ts-morph": "^20.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^4.1.0",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
