--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.4",
+    "lint-staged": "^15.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
@@ -152,5 +153,8 @@
         "preset": "iPhone 7"
       }
     }
+  },
+  "lint-staged": {
+    "**/*.{ts, tsx}": "eslint"
   }
 }
