[FEAT] Add e2e, cypress

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,17 @@
     "paths": {
       "@/*": ["src/*"],
     },
-    "isolatedModules": true
+    "isolatedModules": true,
+    
   },
   "ts-node": {
     "compilerOptions": {
     "module": "CommonJS"
     }
   },
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ]
 }
