--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:e2e": "cypress open",
     "start:dev:server": "node ./json-server/index.js",
     "prepare": "husky install",
     "postinstall": "node ./scripts/clear-cache.js"
@@ -72,6 +73,7 @@
     "concurrently": "^8.2.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "cypress": "^13.6.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
