[FEAT] Add feature script and template

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:json": "node scripts/common/generate-visual-json-report.js",
     "test:e2e": "cypress open",
     "start:dev:server": "node ./json-server/index.js",
     "prepare": "husky install",
-    "postinstall": "node ./scripts/clear-cache.js"
+    "postinstall": "node ./scripts/common/clear-cache.js"
   },
   "keywords": [],
   "author": "",
